# uri

./: CMakeLists.txt  LICENSE  README.md  main.cpp  rule.cpp  rule.hpp  test  test.py  test_rule.cpp  test_uri.cpp  uri.cpp  uri.hpp
.github/workflows/: ci.yaml  codecov.yaml  codeql.yml  fuzztest.yaml  scorecard.yaml
include/uri/: pctdecode.hpp  pctencode.hpp  punycode.hpp  rule.hpp  uri.hpp
lib/: CMakeLists.txt
lib/uri/: CMakeLists.txt  pctencode.cpp  punycode.cpp  rule.cpp  uri.cpp
systemtests/: test  test.py  uri.abnf
tools/: CMakeLists.txt
tools/uri-split/: CMakeLists.txt  uri-split.cpp
unittests/: CMakeLists.txt
unittests/uri/: CMakeLists.txt  test_pctdecode.cpp  test_pctencode.cpp  test_punycode.cpp  test_rule.cpp  test_uri.cpp
unittests/urilib/: CMakeLists.txt  test_rule.cpp  test_uri.cpp
